--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_custom"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_custom"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".mainActivity.MainActivity">
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".previewContent.PreviewContent" />
-        <activity android:name=".DataTexts"></activity>
+        <activity android:name=".DataTexts">
+        </activity>
     </application>
 
 </manifest>
